bk_ida/gobmkida/c3/safety_to_string
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/safety_to_string/src/engine/printutils.c:807:8: error: use of undeclared identifier 'off_4A85F0'
return off_4A85F0[status]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/safety_to_string/src/obj/1/printutils.o] Error 1
